@@ -36,6 +36,7 @@ K  7014	IndexOutOfBoundsException reading IMAP literal when connection fails
 K  7019	IdleManager dies with CancelledKeyException
 K  7026	IdleManager can deadlock when not busy
 K  7027	IMAP Folder methods throw runtime exceptions when connection drops
+K  7028	InternetAddress doesn't detect some illegal newlines
 
 
 		  CHANGES IN THE 1.5.4 RELEASE
